<resources>
    <string name="app_name">MyLocation</string>
    <string name="provider_gps">GPS</string>
    <string name="provider_network">Network</string>
    <string name="location_settings">Location settings</string>

    <string name="menu_item_log_out">Выход</string>
    <string name="menu_item_my_location">Моё положение</string>
    <string name="menu_item_friends">Мои друзья</string>
    <string name="menu_item_places">Мои места</string>
    <string name="menu_item_settings">Настройки</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_txt">Sign in</string>
    <string name="log_in_txt">Log in</string>

    <string name="signIn_input_error">Ошибка ввода данных!</string>
    <string name="default_username">Default_userName</string>
    <string name="default_useremail">Default_userEmail</string>
    <string name="login_hint">Login</string>
    <string name="password_again_hint">Enter password again</string>
    <string name="btn_registration">Log in</string>

    <string name="login_register_success">You logged in successfully!</string>
    <string name="login_register_failed">You registration failed!</string>
    <string name="input_error">Error!User is not added!</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_item_maps_location">На картах</string>

    <string name="location_service_name">Location Service</string>
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>

</resources>
