<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_location"
            android:orderInCategory="1"
            android:title="@string/menu_item_my_location"
            android:icon="@drawable/ic_location"/>
        <item
            android:id="@+id/nav_friends"
            android:orderInCategory="1"
            android:title="@string/menu_item_friends"
            android:icon="@drawable/ic_friends"/>
        <item
            android:id="@+id/nav_places"
            android:orderInCategory="1"
            android:title="@string/menu_item_places"
            android:icon="@drawable/ic_places"/>
        <item
            android:id="@+id/nav_settings"
            android:orderInCategory="1"
            android:title="@string/menu_item_settings"
            android:icon="@drawable/ic_settings"/>

    </group>

</menu>