<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:fitsSystemWindows="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <include android:id="@+id/toolbar"
            layout="@layout/toolbar"/>

    </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_navigation"
        app:headerLayout="@layout/navigation_header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

    <TextView
        android:id="@+id/tvTitleGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provider_gps"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/tvEnabledGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp">
    </TextView>
    <TextView
        android:id="@+id/tvStatusGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp">
    </TextView>
    <TextView
        android:id="@+id/tvLocationGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp">
    </TextView>

    <TextView
        android:id="@+id/tvTitleNet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/provider_network"
        android:textSize="30sp">
    </TextView>
    <TextView
        android:id="@+id/tvEnabledNet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp">
    </TextView>
    <TextView
        android:id="@+id/tvStatusNet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp">
    </TextView>
    <TextView
        android:id="@+id/tvLocationNet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp">
    </TextView>

    <Button
        android:id="@+id/btnLocationSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="onClickLocationSettings"
        android:text="@string/location_settings">
    </Button>

    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout >